--- a/src/styles/pages/properties/_filter-block.scss
+++ b/src/styles/pages/properties/_filter-block.scss
@@ -320,6 +320,10 @@
     @media (max-width: 1200px) {
       max-width: 91.5px;
     }
+    @media (max-width: 992px) {
+      max-width: 100%;
+      width: 100%;
+    }
 
     &::placeholder {
       color: $gray-8;
@@ -337,6 +341,9 @@
         outline: none;
       }
     }
+  }
+  @media (max-width: 992px) {
+    width: 48%;
   }
 }
 
